# J1

./: .gitignore  .rustc_info.json  Cargo.toml  English.nsh  FileAssociation.nsh  README.md  index.html  installer.nsi  j1.d  locale.wxl  main.wixobj  main.wxs  output.wixpdb  package-lock.json  package.json  stderr  stdout  tauri.conf.json  tsconfig.json  utils.nsh  vite.config.ts
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
